<resources>
    <string name="app_name">BlogTour</string>
    <string name="profile_bottom_menu">Profile</string>
    <string name="search_bottom_menu">Search</string>
    <string name="home_bottom_menu">Home</string>
    <string name="more_bottom_menu">More</string>
    <string name="favorites_bottom_menu">Favorites</string>

    <string name="tools_text_item">The main goal of our big car trip was the Great Smoky Mountains
        National Park. Smoky is a huge forest area of several thousand square kilometers.</string>
    <string name="tools_like_item">- like</string>
    <string name="tools_data_item">01.12.2022</string>
    <string name="tools_count_like">0</string>
    <string name="name_tabs_home_new">New</string>
    <string name="name_tabs_home_best">Best</string>
    <string name="name_tabs_home_subscriptions">Subscriptions</string>

    <string name="test_text">TestText</string>
    <string name="login_colon">login:</string>
    <string name="personal_data">Personal data</string>
    <string name="my_posts">My publications</string>
    <string name="favorites">Favorites</string>
    <string name="setting">Setting</string>
    <string name="sign_out">Sing out account</string>
    <string name="publishPost">Publish a post</string>
    <string name="recovery_password"><u>Password recovery?</u>></string>
    <string name="confirm_email"><u>Confirm email</u></string>
    <string name="reset_password"><u>Change password</u></string>
    <string name="privacy_policy">By clicking register, you agree to the \n<u>privacy policy</u></string>
    <string name="privacy_policy_auth">By clicking log in, you agree to the \n<u>privacy policy</u></string>
    <string name="email">Email:</string>
    <string name="location">Location:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="gender">Gender:</string>
    <string name="save_profile"><u>Save changes</u></string>
    <string name="login">Login</string>
    <string name="no_internet">No internet connection</string>
    <string name="update">Update</string>
    <string name="current_location"><u>Your current location</u></string>
    <string name="delete_image"><u>Delete</u></string>
    <string name="cancel"><u>Cancel</u></string>
    <string name="add_location_publication">Geolocation</string>
    <string name="choose_maps"><u>Select on the map</u></string>
    <string name="description_app">Learn, watch, share. \nLeave publications about your travels, share your impressions.
         \nView the geolocation of a publication.</string>
    <string name="politic_conf">Privacy Policy</string>

    <string name="terms_of_use">Terms of use for Yandex Maps</string>
    <string name="version">Version</string>
    <string name="add_geolocation">Add geolocation</string>
    <string name="сhange_photo"><u>Сhange photo</u></string>

    <string-array name="listGender">
        <item>Not indicated</item>
        <item>Men</item>
        <item>Women</item>
    </string-array>

</resources>