<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/innerTextViewAboutApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="О приложении"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logoApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/innerTextViewAboutApp"
        app:srcCompat="@mipmap/ic_app" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewNameApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoApp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewVersionApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Версия 1.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameApp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/politicConf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/politic_conf"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVersionApp" />

    <View
        android:id="@+id/lineViewOne"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/politicConf" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/termsOfUse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/terms_of_use"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineViewOne" />

    <View
        android:id="@+id/lineViewTwo"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/termsOfUse" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewDescriptionApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="7dp"
        android:text="@string/description_app"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineViewTwo" />


</androidx.constraintlayout.widget.ConstraintLayout>