<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profileUser.ProfileFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iconUserProfile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="25dp"
                android:src="@drawable/ic_person"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBarProfileUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/iconUserProfile"
                app:layout_constraintEnd_toEndOf="@+id/iconUserProfile"
                app:layout_constraintStart_toStartOf="@+id/iconUserProfile"
                app:layout_constraintTop_toTopOf="@+id/iconUserProfile" />

            <TextView
                android:id="@+id/innerTextViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/login_colon"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@+id/userLogin"
                app:layout_constraintStart_toStartOf="@+id/userLogin"
                app:layout_constraintTop_toBottomOf="@+id/iconVerifiedUser" />

            <TextView
                android:id="@+id/userLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/iconUserProfile"
                app:layout_constraintTop_toBottomOf="@+id/innerTextViewLogin"
                tools:text="@string/test_text" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iconVerifiedUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_no_verified_user"
                app:layout_constraintStart_toEndOf="@+id/iconUserProfile"
                app:layout_constraintTop_toTopOf="@+id/iconUserProfile" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textBtnVerificationEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_email"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/iconVerifiedUser"
                app:layout_constraintStart_toEndOf="@+id/iconVerifiedUser"
                app:layout_constraintTop_toTopOf="@+id/iconVerifiedUser" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/emailLocalTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email:"
                app:layout_constraintBottom_toBottomOf="@+id/mailUser"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/mailUser" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/mailUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="xxxxxx@xxx.ru"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/emailLocalTV"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUserProfileResetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Сменить пароль"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mailUser" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/singOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnUserProfileResetPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</LinearLayout>