<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addPublication.AddPublicationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/innerTextViewAddPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Добавить публикацию"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/innerLineAddPost"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/innerTextViewAddPost" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/innerEditTextAddPost"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:hint="Введите текст"
            app:layout_constraintTop_toBottomOf="@+id/innerLineAddPost">

            <EditText
                android:id="@+id/editTextPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textLocationLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/add_location_publication"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/innerEditTextAddPost"
            app:layout_constraintTop_toBottomOf="@id/innerEditTextAddPost" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/locationPublication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/add_geolocation"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textLocationLocal"
            app:layout_constraintTop_toBottomOf="@id/textLocationLocal" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationPublication"
            app:srcCompat="@drawable/ic_location" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/currentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_location"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
            app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
            app:layout_constraintTop_toTopOf="@+id/appCompatImageView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/openMapsSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/choose_maps"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
            app:layout_constraintStart_toEndOf="@+id/currentLocation"
            app:layout_constraintTop_toTopOf="@+id/appCompatImageView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/counterImagePublication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            app:layout_constraintEnd_toStartOf="@id/counterImagePublicationStatic"
            app:layout_constraintTop_toTopOf="@id/counterImagePublicationStatic" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/counterImagePublicationStatic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:text="/3 кол-во изображений"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentLocation" />

        <LinearLayout
            android:id="@+id/containerAddImagePublication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/counterImagePublication"
            app:layout_constraintTop_toBottomOf="@+id/counterImagePublication">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/attachPhotoAddPost"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                app:srcCompat="@drawable/ic_add_photo"
                tools:ignore="ImageContrastCheck" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvImageAddPublication"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_loading_image_publication" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/publishBtnAddPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#689F38"
            android:text="Опубликовать"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/containerAddImagePublication" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>